--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,26 +45,26 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <service
-            android:name=".MyWatchFace"
-            android:label="@string/my_analog_name"
-            android:permission="android.permission.BIND_WALLPAPER">
-            <meta-data
-                android:name="android.service.wallpaper"
-                android:resource="@xml/watch_face" />
-            <meta-data
-                android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@drawable/preview_analog" />
-            <meta-data
-                android:name="com.google.android.wearable.watchface.preview_circular"
-                android:resource="@drawable/preview_analog" />
+<!--        <service-->
+<!--            android:name=".MyWatchFace"-->
+<!--            android:label="@string/my_analog_name"-->
+<!--            android:permission="android.permission.BIND_WALLPAPER">-->
+<!--            <meta-data-->
+<!--                android:name="android.service.wallpaper"-->
+<!--                android:resource="@xml/watch_face" />-->
+<!--            <meta-data-->
+<!--                android:name="com.google.android.wearable.watchface.preview"-->
+<!--                android:resource="@drawable/preview_analog" />-->
+<!--            <meta-data-->
+<!--                android:name="com.google.android.wearable.watchface.preview_circular"-->
+<!--                android:resource="@drawable/preview_analog" />-->
 
-            <intent-filter>
-                <action android:name="android.service.wallpaper.WallpaperService" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.service.wallpaper.WallpaperService" />-->
 
-                <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE" />
-            </intent-filter>
-        </service>
+<!--                <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE" />-->
+<!--            </intent-filter>-->
+<!--        </service>-->
     </application>
 
 </manifest>
