--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.headsupwatchface">
-
     <!-- Required to act as a custom watch face. -->
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-
-    <!-- Required for complications to receive complication data and open the provider chooser. -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- Required for complications to receive complication data and open the provider chooser. -->
     <uses-permission android:name="com.google.android.wearable.permission.RECEIVE_COMPLICATION_DATA" />
 
     <uses-feature android:name="android.hardware.type.watch" />
@@ -16,10 +13,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
-        <meta-data
-            android:name="com.google.android.wearable.standalone"
-            android:value="true" />
 
+        <!--    Main manifest of the watchface    -->
         <service
             android:name=".WatchFace"
             android:label="@string/my_digital_name"
@@ -34,6 +29,11 @@
                 android:name="com.google.android.wearable.watchface.preview_circular"
                 android:resource="@drawable/preview_digital_circular" />
 
+            <!-- Specifying that what should be started on clicking the watch face configuration-->
+            <meta-data
+                android:name="com.google.android.wearable.watchface.wearableConfigurationAction"
+                android:value="com.example.android.wearable.watchface.CONFIG_DIGITAL"/>
+
             <intent-filter>
                 <action android:name="android.service.wallpaper.WallpaperService" />
 
@@ -41,32 +41,30 @@
             </intent-filter>
         </service>
 
+        <!--    Activity for choosing a complication    -->
+        <activity
+            android:name="android.support.wearable.complications.ComplicationHelperActivity" />
+
+        <!--    Activity for settings menu    -->
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings">
+            <intent-filter>
+                <!--    Linking to the watch face configuration   -->
+                <action android:name=
+                    "com.example.android.wearable.watchface.CONFIG_DIGITAL" />
+                <category android:name=
+                    "com.google.android.wearable.watchface.category.WEARABLE_CONFIGURATION" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="com.google.android.wearable.standalone"
+            android:value="true" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
-        <activity android:name="android.support.wearable.complications.ComplicationHelperActivity"/>
-
-<!--        <service-->
-<!--            android:name=".MyWatchFace"-->
-<!--            android:label="@string/my_analog_name"-->
-<!--            android:permission="android.permission.BIND_WALLPAPER">-->
-<!--            <meta-data-->
-<!--                android:name="android.service.wallpaper"-->
-<!--                android:resource="@xml/watch_face" />-->
-<!--            <meta-data-->
-<!--                android:name="com.google.android.wearable.watchface.preview"-->
-<!--                android:resource="@drawable/preview_analog" />-->
-<!--            <meta-data-->
-<!--                android:name="com.google.android.wearable.watchface.preview_circular"-->
-<!--                android:resource="@drawable/preview_analog" />-->
-
-<!--            <intent-filter>-->
-<!--                <action android:name="android.service.wallpaper.WallpaperService" />-->
-
-<!--                <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE" />-->
-<!--            </intent-filter>-->
-<!--        </service>-->
     </application>
 
 </manifest>
