--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:17.5.0'
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'androidx.wear:wear:1.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     compileOnly 'com.google.android.wearable:wearable:2.8.1'
 }
